add necessary imports to login_screen.kv

--- a/kv-files/login_screen.kv
+++ b/kv-files/login_screen.kv
@@ -1,3 +1,6 @@
+#:import MDCard kivymd.uix.card.card
+#:import SlideTransition kivy.uix.screenmanager.SlideTransition
+
 <LoginScreen@Screen>:
     MDLabel:
         text: 'Forest'
