update incorrect detail on login_screen kv file

--- a/kv-files/login_screen.kv
+++ b/kv-files/login_screen.kv
@@ -125,7 +125,7 @@
                         MDTextFieldHintText:
                             text: 'Confirm Password'
 
-                    #Log In Button------------------------
+                    #Sign Up Button------------------------
                     MDButton:
                         id: signup_btn
                         style: 'outlined'
