import Window module in dashboard_screen.kv

--- a/kv-files/dashboard_screen.kv
+++ b/kv-files/dashboard_screen.kv
@@ -1,5 +1,6 @@
 #:import SlideTransition kivy.uix.screenmanager.SlideTransition
 #:import FadeTransition kivy.uix.screenmanager.FadeTransition
+#:import Window kivy.core.window.Window
 
 <DashboardScreen@Screen>:
     Profile:
