add FitImage component to the setup screen as a container for the selected background

--- a/kv-files/setup_screen.kv
+++ b/kv-files/setup_screen.kv
@@ -1,4 +1,8 @@
 <SetupScreen@Screen>:
+    FitImage:
+        id: setup_bg
+        source: app.bg_paths[0]
+        mipmap: True
 
     # Timer Label Preview
     MDLabel:
