import missing FadeTransition and SlideTransition modules in setup_screen.kv

--- a/kv-files/setup_screen.kv
+++ b/kv-files/setup_screen.kv
@@ -1,3 +1,6 @@
+#:import FadeTransition kivy.uix.screenmanager.FadeTransition
+#:import SlideTransition kivy.uix.screenmanager.SlideTransition
+
 <SetupScreen@Screen>:
     FitImage:
         id: setup_bg
