add FitImage component to the dashboard to hold the bg selected from the setup screen

--- a/kv-files/dashboard_screen.kv
+++ b/kv-files/dashboard_screen.kv
@@ -3,6 +3,11 @@
 #:import Window kivy.core.window.Window
 
 <DashboardScreen@Screen>:
+    FitImage:
+        id: dashboard_bg
+        source: app.bg_paths[0]
+        mipmap: True
+
     Profile:
         id: profile
 
