--- a/kv-files/startup_screen.kv
+++ b/kv-files/startup_screen.kv
@@ -1,4 +1,10 @@
 <StartupScreen@Screen>:
+    Video:
+        source: app.app_bg
+        state: 'play'
+        options: {'eos': 'loop'}
+        fit_mode: 'cover'
+        
     MDLabel:
         text: 'Forest'
         halign: 'center'
