add extra FadeTransition logic on pressing the 'setup' button for a seamless UI transition

--- a/kv-files/dashboard_screen.kv
+++ b/kv-files/dashboard_screen.kv
@@ -32,6 +32,7 @@
         MDButton:
             style: 'text'
             on_press: 
+                app.root.transition = FadeTransition(duration=0.2)
 
             theme_bg_color: 'Custom'
             md_bg_color: 0, 0, 0, 0.5
