add press behavior for pressing the profile menu: open the profile menu dropdown

--- a/kv-files/dashboard_screen.kv
+++ b/kv-files/dashboard_screen.kv
@@ -84,3 +84,4 @@
         size: 50, 50
         pos_hint: {'center_x': 0.5, 'center_y': 0.5}
         radius: self.width / 2
+        on_release: app.open_profile_menu()
