--- a/kv-files/settings_dialog.kv
+++ b/kv-files/settings_dialog.kv
@@ -4,7 +4,7 @@ MDSmartTile:
         mipmap: True
         fit_mode: 'fill'
         size_hint: 0.4, 0.47
-        source: "resources/bg_1.png"
+        source: "resources/bg_1.jpg"
         radius: [4]
         pos_hint: {'center_x':0.26,'center_y':0.75}
         opacity: 0.6
@@ -13,7 +13,7 @@ MDSmartTile:
     MDSmartTileImage:
         mipmap: True
         size_hint: 0.4, 0.47
-        source: "resources/bg_2.png"
+        source: "resources/bg_2.jpg"
         radius: [4]
         pos_hint: {'center_x':0.74,'center_y':0.75}
         opacity: 0.6
@@ -22,7 +22,7 @@ MDSmartTile:
     MDSmartTileImage:
         mipmap: True
         size_hint: 0.4, 0.47
-        source: "resources/bg_3.png"
+        source: "resources/bg_3.jpg"
         radius: [4]
         pos_hint: {'center_x':0.26,'center_y':0.25}
         opacity: 0.6
@@ -31,7 +31,7 @@ MDSmartTile:
     MDSmartTileImage:
         mipmap: True
         size_hint: 0.4, 0.47
-        source: "resources/bg_4.png"
+        source: "resources/bg_4.jpg"
         radius: [4]
         pos_hint: {'center_x':0.74,'center_y':0.25}
         opacity: 0.6
