add button behavior to the 'play/pause timer' button in the dashboard screen

--- a/kv-files/dashboard_screen.kv
+++ b/kv-files/dashboard_screen.kv
@@ -57,6 +57,7 @@
             on_release:
 
                 # ----------------i.e., start timer if no timer event, else stop----------------
+                app.timer.start_timer() if app.timer.tick_event is None else app.timer.stop_timer()
 
 
             MDButtonIcon:
