add id 'timer_preview' to the timer label for the setup screen

--- a/kv-files/setup_screen.kv
+++ b/kv-files/setup_screen.kv
@@ -9,6 +9,7 @@
 
     # Timer Label Preview
     MDLabel:
+        id: timer_preview
         text: '25:00'
         halign: 'center'
         theme_text_color: "Custom"
