apply replacement resources to all the screens' components, including the settings dialog, which also includes their access code logic

--- a/kv-files/dashboard_screen.kv
+++ b/kv-files/dashboard_screen.kv
@@ -3,9 +3,12 @@
 #:import Window kivy.core.window.Window
 
 <DashboardScreen@Screen>:
-    FitImage:
+    Video:
         id: dashboard_bg
         source: app.bg_paths[0]
+        state: 'play'
+        options: {'eos': 'loop'}
+        fit_mode: 'cover'
         mipmap: True
 
     Profile:
