--- a/kv-files/setup_screen.kv
+++ b/kv-files/setup_screen.kv
@@ -2,9 +2,12 @@
 #:import SlideTransition kivy.uix.screenmanager.SlideTransition
 
 <SetupScreen@Screen>:
-    FitImage:
+    Video:
         id: setup_bg
         source: app.bg_paths[0]
+        state: 'play'
+        options: {'eos': 'loop'}
+        fit_mode: 'cover'
         mipmap: True
 
     # Timer Label Preview
@@ -35,8 +38,10 @@
 
         on_release:
             app.root.get_screen('dashboard').ids.dashboard_bg.source = app.root.get_screen('setup').ids.setup_bg.source
+            app.root.get_screen('login').ids.login_bg.source = app.root.get_screen('setup').ids.setup_bg.source
+            
             app.root.current = 'dashboard'
-            app.root.transition = SlideTransition(duration=0.25)
+            app.root.transition = FadeTransition(duration=0.1)
             Window.borderless=0
 
     # Previous Setup -------------------------------------------------------
