--- a/kv-files/dashboard_screen.kv
+++ b/kv-files/dashboard_screen.kv
@@ -73,6 +73,10 @@
             theme_bg_color: 'Custom'
             md_bg_color: 0, 0, 0, 0
 
+            on_press:
+                self.app_instance.root.current = 'statistics'
+                app.root.transition = FadeTransition(duration=0.1)
+
             MDButtonIcon:
                 pos_hint: {'center_x': 0.5, 'center_y': 0.5}
                 icon: 'chart-box'
