--- a/kv-files/dashboard_screen.kv
+++ b/kv-files/dashboard_screen.kv
@@ -74,7 +74,7 @@
             md_bg_color: 0, 0, 0, 0
 
             on_press:
-                self.app_instance.root.current = 'statistics'
+                app.root.current = 'statistics'
                 app.root.transition = FadeTransition(duration=0.1)
 
             MDButtonIcon:
