--- a/kv-files/setup_screen.kv
+++ b/kv-files/setup_screen.kv
@@ -39,6 +39,7 @@
         on_release:
             app.root.get_screen('dashboard').ids.dashboard_bg.source = app.root.get_screen('setup').ids.setup_bg.source
             app.root.get_screen('login').ids.login_bg.source = app.root.get_screen('setup').ids.setup_bg.source
+            app.root.get_screen('statistics').ids.statistics_bg.source = app.root.get_screen('setup').ids.setup_bg.source
             
             app.root.current = 'dashboard'
             app.root.transition = FadeTransition(duration=0.1)
