add loading indicator to the dashboard screen for indicating that the charts are being created based on the newest possible data

--- a/kv-files/dashboard_screen.kv
+++ b/kv-files/dashboard_screen.kv
@@ -14,6 +14,15 @@
     Profile:
         id: profile
 
+    MDCircularProgressIndicator:
+        id: loading_stats
+        size_hint: None, None
+        size: 80, 80
+        pos_hint: {'center_x': 0.5, 'center_y': 0.5}
+        active: False
+        color: 1, 1, 1, 1
+        line_width: 5
+
     MDLabel:
         id: timer_label
         text: '25:00'
