--- a/kv-files/startup_screen.kv
+++ b/kv-files/startup_screen.kv
@@ -1,7 +1,8 @@
 <StartupScreen@Screen>:
+
     Video:
         id: intro
-        source: app.startup_sequence
+        source: 'resources/setup_startup.mp4'
         options: {'eos': 'stop'}
         fit_mode: 'cover'
         mipmap: True
