--- a/kv-files/statistics_screen.kv
+++ b/kv-files/statistics_screen.kv
@@ -1,7 +1,7 @@
-<StatisticsScreen@MDScreen>:
+<StatisticsScreen@Screen>:
     Video:
         id: statistics_bg
-        source: app.bg_paths[0]
+        source: 'resources/setup_0.mp4'
         state: 'play'
         options: {'eos': 'loop'}
         fit_mode: 'cover'
