--- a/kv-files/help_dialog.kv
+++ b/kv-files/help_dialog.kv
@@ -76,7 +76,7 @@ MDRelativeLayout:
             padding: [10, 10, 10, 3]
         
         MDLabel:
-            text: 'Pomodoro Timer is your personal productivity companion, designed to help you stay focused and work smarter. Based on the Pomodoro Technique, this app encourages you to break your work into focused intervals, typically 25 minutes, followed by short breaks to recharge.'
+            text: 'Forest is your personal productivity companion, designed to help you stay focused and work smarter. Based on the Pomodoro Technique, this app encourages you to break your work into focused intervals, typically 25 minutes, followed by short breaks to recharge.'
             font_style: 'Title'
             role: 'medium'
             halign: 'justify'
